Refactor: Se cambio la forma en la que se hace la conexion para mantener el desacoplamiento